Site SoDog - versão 04111845
Site SoDog - versão 04111845

-ajuste de codigo para pegar gramatura
-inclusão de peso para adulto
- correção de "ver mais"

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 SoDog. Todos os direitos reservados.</p>
+        <p>&copy; 2024 SoDog. Todos os direitos reservados. versão 04/11/2024 às 18:44</p>
     </footer>
 
     <script src="script.js"></script>
