--- a/sobre.html
+++ b/sobre.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="Img/logo/logo.png" type="image/x-icon">
-    <title>SoDog | Home</title>
+    <title>SoDog | Sobre </title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -27,16 +27,11 @@
     </header>
 
     <main>
-        <section class="hero">
-            <h1>Bem-vindo à Calculadora de Alimentação Natural para Cães</h1>
-            <p>Calcule a alimentação ideal para o seu melhor amigo.</p>
-            <img src="Img/img_inicio.png" alt="Cachorro" class="hero-img">
-            <a href="calculadora.html"><img src="Img/clique.gif" alt="Clique para realizar o cálculo" class="centralizado"></a>
-        </section>
+        <nav>Sobre</nav>
     </main>
 
     <footer>
-        <p>&copy; 2024 SoDog. Todos os direitos reservados. versão 06/11/2024 às 11:00</p>
+        <p>&copy; 2024 SoDog. Todos os direitos reservados. versão 04/11/2024 às 18:44</p>
     </footer>
 
     <script src="script.js"></script>
